infrastructure/eks/manifests/review-apps/network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: isolate-prod
  namespace: serves
spec:
  podSelector: {}
  ingress:
    - from:
      - podSelector: {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: external-traffic
  namespace: serves
spec:
  podSelector: 
    matchLabels:
      app: nginx-ingress
  ingress:
    - from: []
